testdata/errors/import_cycle/a.spy
import b

def f() -> int:
    return 1
